--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Sonora Project - Start Page</title>
+    <link type="text/css" rel="main stylesheet" href="css/styles_main.css">
   </head>
   <body>
+    <h1>This is a heading.</h1>
+    <p>This is a paragraph. There is nothing more to see here.</p>
   </body>
 </html>
